--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <center>
+      <!-- header section -->
       <header>
         <table cellspacing="20">
           <tr>
@@ -76,8 +77,10 @@
           </tr>
         </table>
       </header>
+      <!-- end header section -->
 
       <main>
+        <!-- profile-summary -->
         <section id="profile-summary">
           <table width="50%" cellspacing="20">
             <tr>
@@ -111,9 +114,11 @@
             </tr>
           </table>
         </section>
+        <!-- end profile-summary -->
 
         <hr color="#2d7dd2" width="70%" size="1" />
 
+        <!-- employment -->
         <section id="employment">
           <table width="50%" cellspacing="20">
             <tr>
@@ -161,9 +166,11 @@
             </tr>
           </table>
         </section>
+        <!-- end employment -->
 
         <hr color="#2d7dd2" width="70%" size="1" />
 
+        <!-- education -->
         <section id="education">
           <table width="50%" cellspacing="20">
             <tr>
@@ -201,9 +208,11 @@
             </tr>
           </table>
         </section>
+        <!-- end education -->
 
         <hr color="#2d7dd2" width="70%" size="1" />
 
+        <!-- skills -->
         <section id="skills">
           <table width="50%" cellspacing="20">
             <tr>
@@ -248,9 +257,11 @@
             </tr>
           </table>
         </section>
+        <!-- end skills -->
 
         <hr color="#2d7dd2" width="70%" size="1" />
 
+        <!-- references -->
         <section id="references">
           <table width="50%" cellspacing="20">
             <tr>
@@ -275,9 +286,12 @@
                       </font>
                     </i>
                   </li>
-                 <li>
-                   <p></p>
-                    <b>Dr. Sampson Takyi Appiah (University of Mines and Technology)</b>
+                  <li>
+                    <p></p>
+                    <b
+                      >Dr. Sampson Takyi Appiah (University of Mines and
+                      Technology)</b
+                    >
                     <br />
                     <i>
                       <font color="#575e66">
@@ -290,6 +304,7 @@
             </tr>
           </table>
         </section>
+        <!-- end references -->
       </main>
     </center>
   </body>
